--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,13 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
+    "@chakra-ui/next-js": "^2.1.5",
+    "@chakra-ui/react": "^2.8.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
+    "framer-motion": "^10.13.0",
     "mongodb": "^5.7.0",
     "next": "13.4.10",
     "next-auth": "^4.22.3",
