--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.17",
     "@auth/prisma-adapter": "^1.0.1",
     "@chakra-ui/next-js": "^2.1.5",
     "@chakra-ui/react": "^2.8.0",
@@ -17,6 +18,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
     "framer-motion": "^10.13.0",
+    "graphql": "^16.7.1",
     "mongodb": "^5.7.0",
     "next": "13.4.10",
     "next-auth": "^4.22.3",
