--- a/backend2/package.json
+++ b/backend2/package.json
@@ -13,9 +13,11 @@
     "@graphql-tools/schema": "^10.0.0",
     "apollo-server-core": "^3.12.0",
     "apollo-server-express": "^3.12.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.7.1",
     "lodash.merge": "^4.6.2",
+    "next-auth": "^4.22.3",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
