username create working

--- a/backend2/.env
+++ b/backend2/.env
@@ -1,4 +1,3 @@
 CLIENT_ORIGIN = http://localhost:3000
 
-NEXTAUTH_URL = http://localhost:3000
-NEXTAUTH_SECRET = 0YOGzeoT9Lf9a+IcIgcX7efMHi2IPO4PTsHEnwx9I74=
+MONGODB_URL = mongodb+srv://o3jpro:audupikin@cluster0.plahpke.mongodb.net/imessage?retryWrites=true&w=majority
