--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "next": "13.4.10",
     "next-auth": "^4.22.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@types/node": "20.4.2",
