--- a/backend2/package.json
+++ b/backend2/package.json
@@ -17,12 +17,16 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.7.1",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.14.0",
     "lodash.merge": "^4.6.2",
     "next-auth": "^4.20.1",
     "nodemon": "^3.0.1",
-    "prisma": "^5.0.0"
+    "prisma": "^5.0.0",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
-    "@types/lodash.merge": "^4.6.7"
+    "@types/lodash.merge": "^4.6.7",
+    "@types/ws": "^8.5.5"
   }
 }
