--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^5.0.0",
     "framer-motion": "^10.13.0",
     "graphql": "^16.7.1",
+    "graphql-ws": "^5.14.0",
     "mongodb": "^5.7.0",
     "next": "13.4.10",
     "next-auth": "^4.22.3",
