--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.11.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.13.0",
     "graphql": "^16.7.1",
     "graphql-ws": "^5.14.0",
