--- a/backend2/package.json
+++ b/backend2/package.json
@@ -10,23 +10,28 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@graphql-tools/schema": "^10.0.0",
-    "@prisma/client": "^5.0.0",
-    "apollo-server-core": "^3.12.0",
-    "apollo-server-express": "^3.12.0",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "graphql": "^16.7.1",
+    "@apollo/server": "^4.2.2",
+    "@graphql-tools/schema": "^9.0.4",
+    "@prisma/client": "^4.0.0",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
-    "graphql-ws": "^5.14.0",
+    "graphql-tag": "^2.12.6",
+    "graphql-ws": "^5.11.2",
     "lodash.merge": "^4.6.2",
-    "next-auth": "^4.20.1",
-    "nodemon": "^3.0.1",
-    "prisma": "^5.0.0",
-    "ws": "^8.13.0"
+    "next-auth": "^4.10.3",
+    "ts-node": "^10.9.1",
+    "ws": "^8.9.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/lodash.merge": "^4.6.7",
-    "@types/ws": "^8.5.5"
+    "@types/ws": "^8.5.3",
+    "nodemon": "^2.0.19",
+    "prisma": "^4.0.0",
+    "typescript": "^4.8.3"
   }
 }
